test/conformance/chainsaw/mutating-policies/reporting/with-exceptions/good-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-deployment
  namespace: mpol-exceptions-regular
  labels:
    app: nginx
    env: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: public.ecr.aws/docker/library/nginx:latest
