test/conformance/chainsaw/mutating-policies/reporting/with-exceptions/report-pass-assert.yaml
apiVersion: wgpolicyk8s.io/v1alpha2
kind: PolicyReport
metadata:
  namespace: mpol-exceptions-regular
  ownerReferences:
  - apiVersion: apps/v1
    kind: Deployment
    name: good-deployment
results:
- message: success
  policy: add-deployment-labels
  properties:
    process: background scan
  result: pass
  scored: true
  source: KyvernoMutatingPolicy
scope:
  apiVersion: apps/v1
  kind: Deployment
  name: good-deployment
  namespace: mpol-exceptions-regular
summary:
  error: 0
  fail: 0
  pass: 1
  skip: 0
  warn: 0
